# checklist-manager

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  Makefile  README.md  Taskfile.yml  compose.dev.yml  compose.slim.yml  compose.yml  index.html  mkdocs.yml  sitemap.xml  sonar-project.properties
.github/: dependabot.yml  labeler.yml
.github/workflows/: build.yml  docs.yml  labeler.yml  sonar.yml
app/: index.html
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/authentication/: admin.py  models.py  serializers.py  social_pipeline.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_initial.py
backend/checklist/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/checklist/migrations/: 0001_initial.py
backend/core/: celery.py  mixins.py  models.py  paginators.py  settings.py  tasks.py  tests.py  tokens.py  urls.py  utils.py
backend/templates/notifications/: signup.email.html
c4/: pages
c4/container/: index.html
c4/system/: index.html
database/database/: index.html
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile
docker/nginx/: Dockerfile  default.conf
docs/: .env.example  db.html  index.md  pages  schema.yml
docs/c4/: container.md  system.md
docs/database/: database.md
frontend/: .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  index.html  openapi-config.json  package.json  tsconfig.json  vite.config.mjs  vite.config.ts
frontend/src/: App.tsx  Router.tsx  main.tsx  setupTests.ts
frontend/src/components/: types.d.ts
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/checklist/: CheckListForm.tsx  CheckListItemForm.tsx  CheckListRunItemMessageForm.tsx  CheckListRunList.tsx  CheckListStats.tsx  CheckListTemplateList.tsx
frontend/src/components/checklist/linear/: CheckListForm.tsx  CheckListItemForm.tsx  CheckListRunItemMessageForm.tsx  CheckListRunList.tsx  CheckListStats.tsx
frontend/src/components/checklist/tabular/: CheckListTableForm.tsx  TableModal.tsx
frontend/src/components/project/: ChecklistTemplateItem.tsx  ChecklistTemplateList.tsx  CreateCheckList.tsx  EditCheckList.tsx  ProjectForm.tsx  ProjectList.tsx  RunList.tsx  RunStatistic.tsx
frontend/src/components/projects/: ProjectList.tsx
frontend/src/components/runs/: RunItem.tsx
frontend/src/components/shared/: Crumbs.tsx  Footer.tsx  FormItemControl.tsx  Header.module.css  Header.tsx  ModalPopup.tsx  NotFound.module.css  NotFound.tsx  StatusBadge.tsx  ThemeToggle.tsx
frontend/src/hooks/: formatDate.ts  makeKey.ts  makeSwap.ts  make_key.ts  useDuration.ts  usePagination.ts
frontend/src/pages/: CheckListRunPage.tsx  Checklist.page.tsx  ChecklistTemplatePage.tsx  Home.page.tsx  HomePage.tsx  Login.page.tsx  LoginPage.tsx  MainLayout.tsx  Project.page.tsx  ProjectDetail.page.tsx  ProjectPage.tsx  ProtectedRoute.tsx  Run.page.tsx  SignUpPage.tsx  SignupConfirm.page.tsx  SocialLogin.page.tsx  Template.page.tsx
frontend/src/redux/: api.ts  authSlice.ts  baseApi.ts  store.ts
frontend/src/settings/: constants.ts  settings.ts
nginx/: Dockerfile
search/: search_index.json
